Endpoint movido pro arquivo de propriedades
Algumas opções de endpoint adicionadas
