# src/main/java/com/icarros/formula1/api/ConstructorsApiImpl.java
@@ -2,17 +2,18 @@ package com.icarros.formula1.api;
 
 import com.icarros.formula1.model.Constructor;
 import com.icarros.formula1.model.Race;
-import com.icarros.formula1.model.RaceResults;
+import com.icarros.formula1.model.Result;
 import io.swagger.annotations.Api;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @Api(tags = {"constructors",})
 public class ConstructorsApiImpl implements ConstructorsApi {
@@ -21,19 +22,43 @@ public class ConstructorsApiImpl implements ConstructorsApi {
     private RacesApiImpl racesApi;
 
     @Override
-    public ResponseEntity<List<Constructor>> getAllConstructors(@Valid String name, @Valid String nationality) {    ResponseEntity<List<Race>> data = racesApi.getAllRaces();
-        return new ResponseEntity<>(Objects.requireNonNull(data.getBody()).get(0).
-                getResults().stream().map(RaceResults::getConstructor).collect(Collectors.toList()), data.getStatusCode());
+    public ResponseEntity<List<Constructor>> getAllConstructors(@Valid String name, @Valid String nationality) {
+        log.info("Getting all constructors");
+
+        ResponseEntity<List<Race>> data = racesApi.getAllRaces();
+
+        List<Constructor> result = Objects.requireNonNull(data.getBody()).get(0).
+                getResults().stream().map(Result::getConstructor).collect(Collectors.toList());
+
+        //  Filtra por nacionalidade
+        if (nationality != null && !nationality.isEmpty()) {
+
+            log.info("Filtering by nationality: {}", nationality);
+            result = result.stream().filter(constructor -> constructor.getNationality().contains(nationality)).collect(Collectors.toList());
+        }
+
+        // Filtra por nome
+        if (name != null && !name.isEmpty()) {
+            log.info("Filtering by name:  {}", name);
+            result = result.stream().filter(constructor -> constructor.getName().contains(name)).collect(Collectors.toList());
+        }
+
+        //  Por razões paranormais o .distinct() das streams não tava removendo as duplicatas, então, fiz a implementação a seguir:
+        Set<Constructor> uniques = new HashSet<>(result);
+
+        return new ResponseEntity<>(new ArrayList<>(uniques), data.getStatusCode());
     }
 
     @Override
     public ResponseEntity<Constructor> getConstructorById(Integer constructorId) {
-        ResponseEntity<List<Race>> data = racesApi.getAllRaces();
+        log.info("Getting constructor of ID: {}", constructorId);
 
-        return new ResponseEntity<>((Constructor) Objects.requireNonNull(
-                data.getBody()).get(0).getResults().stream().filter(
-                result -> Integer.valueOf(result.getConstructor().getConstructorId()).equals(constructorId)),
-                data.getStatusCode());
+        ResponseEntity<List<Constructor>> data = this.getAllConstructors(null, null);
+
+        Constructor result = Objects.requireNonNull(data.getBody()).stream().filter(
+                constructor -> constructor.getConstructorId().equals(String.valueOf(constructorId))).findFirst().get();
+
+        return new ResponseEntity<>(result, data.getStatusCode());
     }
 
 }
